--- a/css/login.css
+++ b/css/login.css
@@ -13,14 +13,27 @@
     text-align: center;
     letter-spacing: 2px;
 }
-body{
+
+
+
+
+
+body
+    
+{
     margin: 0;
     padding: 0;
-    background: url(gaming.jpg);
+    background-image:url(news.JPG);
     background-size: cover;
     background-position: center;
     font-family: sans-serif;
 }
+
+
+
+
+
+
 
 .loginbox{
     width: 320px;
@@ -38,6 +51,61 @@ h1{
     margin: 0;
     padding: 0 0 20px;
     text-align: center;
+    font-size: 22px;
+    
+}
+
+.loginbox p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.loginbox input{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.loginbox input[type="text"], input[type="password"]
+{
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+}
+
+.loginbox input[type="submit"]
+{
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #fb2525;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 22px;
+}
+
+.loginbox input[type="submit"]:hover
+{
+    cursor: pointer;
+    background: #ffc107;
+    color: #000;
+}
+
+.loginbox a{
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 22px;
+    color:darkgray;
+}
+
+.loginbox a:hover
+{
+    color:aqua;
+}
     font-size: 22px;
     
 }
