--- a/css/contak.css
+++ b/css/contak.css
@@ -1,14 +1,55 @@
 body{
     background-image:url(ica.png)
 }
+/*syle untuk hyperlink ke semua situs yang kita catum ke a herf dan menggunakan style tulisan ke tengah warna putih*/
 .header{
 	width: 100%;
-	height: 20px;
-	color:black;
-	font-size:15px;
+	height: 30px;
+	color: white;
+	font-size: 20px;
 	text-align: center;
-	letter-spacing:2px;
-    
+	letter-spacing: 2px;
+}
+/*style untuk header dengan background putple dengan P X L 100% dan 150px*/
+.header1{
+	width: 100%;
+	height: 150px;
+	color: white;
+	line-height: 150px;
+	background-color: purple;
+}
+body{
+	margin: 0px;
+	padding: 0px;
+}
+*{
+	box-sizing: border-box;
+}
+.btn{
+	border: ;
+	color: #000;
+	text-decoration: none;
+	transition: 0.6s;
+	background-color: ;
+}
+
+.btn:hover{
+	background-color: purple;
+}
+p{
+	text-align: left;
+	font-family: sans-serif;
+}
+
+body{
+	background-color: antiquewhite;
+}
+
+a{
+	text-decoration: none;
+	color: #000;
+	border: ;
+	text-transform: 0.6s;		
 }
 /*style yang kami pakai disini adalah style bawaan dari basic yang kami buat */
 @media only screen and(max-width:500)
@@ -21,4 +62,9 @@ body{
     width: 100%;
 	height:100px;
 	line-height:50px;
+}
+@media only screen and (max-width: 620px){
+	.header{
+		font-size: 15px;
+	}
 }
