--- a/css/home.css
+++ b/css/home.css
@@ -45,3 +45,161 @@ body{
 	margin: 0px;
 	padding: 0px;
 }
+*{
+	box-sizing: border-box;
+}
+.btn{
+	border: ;
+	color: #000;
+	text-decoration: none;
+	transition: 0.6s;
+	background-color: ;
+}
+
+.btn:hover{
+	background-color: purple;
+}
+p{
+	text-align: left;
+	font-family: sans-serif;
+}
+
+body{
+	background-color: antiquewhite;
+}
+
+a{
+	text-decoration: none;
+	color: #000;
+	border: ;
+	text-transform: 0.6s;		
+}
+
+.right{
+	background-color: antiquewhite;
+	float: left;
+	width: 24.75%;
+	border: 1px solid #000;
+}
+
+.incontent{
+	float: center;
+	background-color: white;
+	width: 50%;
+	border: ;
+
+}
+
+.left{
+	float: left;
+	width: 25%;
+	background-color: gray;
+	height: 500px;
+	border: ;
+}
+
+.footer{
+	clear: left;
+	width: 50%;
+	border: ;
+	text-align: center;
+	letter-spacing: 2px;
+	background-color: gray;
+	margin: auto;
+}
+
+.header1{
+	line-height: 150px;
+}
+
+.header{
+	border: ;
+	width: 99.8%;
+	line-height: 70px;
+	height: 70px;
+}
+
+.galleryml1{
+width: 350px;
+height: 350px;
+}
+
+.gallery1{
+text-align: center;
+}
+.content{
+	margin: 0;
+}
+.btn_style{
+			border: 1px solid #cecece;
+			border-radius: 3px;
+			padding: 3px 10px;
+			box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+			color: white;
+			background-color:darkmagenta;
+		}
+		.btn_style:hover{
+			border: 1px solid #b1b1b1;
+			box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+		}
+
+		@media only screen and (max-width:1070px) {
+  /* For mobile phones: */
+  		.incontent{
+  		  width:100%;
+  		}
+
+  	}
+
+  		@media only and (max-width: 1070px){
+  			.incontent p{
+  				font-size: 5px;
+  			}
+  		}
+
+  		@media only screen and (max-width:1070px) {
+  /* For mobile phones: */
+  		.incontent{
+  		  height: 200%;
+  	}	
+
+  	
+
+		@media only screen and (max-width:800px) {
+  /* For mobile phones: */
+  		.incontent,.footer{
+  		  width:100%;
+  	}
+
+  		@media only screen and (max-width: 800px){
+  			.incontent{
+  				height: auto;
+  			}
+  		}
+
+
+  		@media only screen and (max-width:800px) {
+  		/* For mobile phones: */
+  		.galleryml1 {
+    	width:100%;
+    	height: auto;
+    	text-align: center;
+  		}
+
+	}
+
+		@media only screen and (max-width: 620px) {
+			.incontent, .footer{
+				width: 100%;
+			}
+
+
+		}
+
+		@media only screen and (max-width: 620px){
+			.header{
+				font-size: 15px;
+			}
+		}
+
+		
