--- a/css/login.css
+++ b/css/login.css
@@ -1,10 +1,4 @@
-.header2{
-    width: 100%;
-    height: 100px;
-    color: white;
-    line-height: 100px;
-    background-color: purple;
-}
+
 .file{
     width: 100%;
     height: 30px;
@@ -13,34 +7,20 @@
     text-align: center;
     letter-spacing: 2px;
 }
-
-
-
-
-
-body
-    
+body   
 {
     margin: 0;
     padding: 0;
-    background-image:url(news.JPG);
+    background-image:url(../img/news.jpg);
     background-size: cover;
     background-position: center;
-    font-family: sans-serif;
 }
-
-
-
-
-
-
-
 .loginbox{
     width: 320px;
     height: 420px;
     background: #000;
     color: #fff;
-    top: 50%;
+    top: 65%;
     left: 50%;
     position: absolute;
     transform: translate(-50%,-50%);
@@ -178,7 +158,61 @@ h1{
 	line-height: 150px;
 	background-color: purple;
 }
+.header1{
+	line-height: 150px;
+}
+.header{
+	border: ;
+	width: 99.8%;
+	line-height: 70px;
+	height: 70px;
+}
 body{
 	margin: 0px;
 	padding: 0px;
+}
+*{
+	box-sizing: border-box;
+}
+.btn{
+	border: ;
+	color: #000;
+	text-decoration: none;
+	transition: 0.6s;
+	background-color: ;
+}
+
+.btn:hover{
+	background-color: purple;
+}
+p{
+	text-align: left;
+	font-family: sans-serif;
+}
+
+body{
+	background-color: antiquewhite;
+}
+
+a{
+	text-decoration: none;
+	color: #000;
+	border: ;
+	text-transform: 0.6s;		
+}
+@media only screen and(max-width:500)
+.header1{
+    font-size:10px;	
+}
+.header1{
+    background-color: purple;
+    height:100px;
+    width: 100%;
+	height:100px;
+	line-height:50px;
+}
+@media only screen and (max-width: 620px){
+	.header{
+		font-size: 15px;
+	}
 }
