--- a/css/news.css
+++ b/css/news.css
@@ -73,25 +73,12 @@ a{
 	letter-spacing: 2px;
 	background-color: gray;
 }
-@media only screen and (max-width: 1240px){
-	.inright img{
-		height: 50%;
-	}
-}
 
 @media only screen and (max-width:1070px) {
 /* For mobile phones: */
-  .left, .incontent, .right{
+ .incontent{
 	width:100%;
   }
-
-  .inright img{
-	  width: 500px;
-	  height: 175px;
-  }
-
-}
-
   @media only and (max-width: 1070px){
 	  .incontent p{
 		  font-size: 5px;
@@ -104,35 +91,9 @@ a{
 	height: 200%;
 }
 
-  
-  @media only screen and (max-width: 800px){
-	  .copyright{
-		  background-color: purple;
-		  clear: left;
-	  }
-  }
-
-	@media only screen and (max-width: 800px){
-	  .box{
-		  height: 400px;
-	  }
-  }  		
-
-  @media only screen and (max-width: 1070px){
-	  .left{
-		  height: 50%;
-	  }
-  }
-
-  @media only screen and (max-width: 1070px){
-	  .left img{
-		  float:center;
-	  }
-  }
-
 @media only screen and (max-width:800px) {
 /* For mobile phones: */
-  .left, .incontent, .right, .footer,.fottit{
+.incontent, .footer{
 	width:100%;
 }
 
@@ -142,18 +103,6 @@ a{
 	  }
   }
 
-@media only screen and (max-width: 800px){
-  .left img{
-	  text-align: center;
-	  width: 270px;
-  }
-
-  @media only screen and (max-width: 853px){
-  .right img{
-	  width: 400px;
-	  height: 172.9px;
-  }
-}
 
   @media only screen and (max-width:800px) {
   /* For mobile phones: */
@@ -163,37 +112,17 @@ height: auto;
 text-align: center;
   }
 
-  .right img{
-	  width: 300px;
-  }
-
 }
 
 @media only screen and (max-width: 620px) {
-	.left, .incontent, .right, .footer, .box{
+	.incontent,.footer{
 		width: 100%;
 	}
 
-	.right img{
-		width: 250px;
-	}
-
-}
-
-@media only screen and (max-width: 853px){
-	.box img{
-		height: 50%;
-	}
 }
 
 @media only screen and (max-width: 620px){
 	.header{
 		font-size: 15px;
-	}
-}
-
-@media only and (max-width: 853px){
-	.right img {
-		height: 2%;
 	}
 }
