--- a/css/home.css
+++ b/css/home.css
@@ -23,24 +23,7 @@
 	border-radius: 5px;
 	margin: auto;
 }
-/*style untuk gambar ml dengan */
-.galleryml{
-	width: 150px;
-	height: 350px;
-}
-/*style untuk gambar pubg */
-.gallerypubg{
-	width: 150px;
-	height: 350px;
-}
-/*style untuk mengatur gambar ml sama pubg */
-.gallery li{
-	width: 150px;
-	height: 350px;
-	float: left;
-	margin-right:10px;
-	border: 5px solid grey; 
-}
+
 body{
 	margin: 0px;
 	padding: 0px;
@@ -99,13 +82,11 @@ a{
 }
 
 .footer{
-	clear: left;
-	width: 50%;
-	border: ;
 	text-align: center;
 	letter-spacing: 2px;
-	background-color: gray;
+	background-color: #808080;
 	margin: auto;
+	width: 100%;
 }
 
 .header1{
